--- a/albums.html
+++ b/albums.html
@@ -3,11 +3,11 @@
 <body style=background-color:#e1e1d0;> </body>
 <head>
 <title> Albums </title>
-<div class="center">
-<img src="logo.png" alt="logo" style="width:500px;height:250px;" >
-</div>
-</head>
+<div class="left">
+<img src="logo.png" alt="logo" style="width:1000px;height:300px;" >
 
+</head>
+</div>
 <style>
 <meta name="viewport" content="width=device-width, initial-scale=1">
   
@@ -70,14 +70,16 @@ body {font-family: Arial, Helvetica, sans-serif;}
   <a href="tour.html">Tours</a>
   <a href="eShop.html">eShop</a>
   </div>
-  <br><br>
+  
 <img src="album01.jpg" alt="20YearsPlacebo" style="width:300px;height:250px;">
 <img src="album02.jpg" alt="20YearsPlacebo" style="width:300px;height:250px;">
 <img src="album03.jpg" alt="20YearsPlacebo" style="width:300px;height:250px;">
 <img src="album04.jpg" alt="20YearsPlacebo" style="width:300px;height:250px;">
 <img src="album05.png" alt="20YearsPlacebo" style="width:300px;height:250px;">
 
+
 <br><br>
+
 </div>
 </body>
 
