--- a/albums.html
+++ b/albums.html
@@ -1,92 +1,32 @@
-<!DOCTYPE HTML>
 <html>
-<body style=background-color:#e1e1d0;> </body>
 <head>
-<title> Albums </title>
-<div class="left">
-<img src="logo.png" alt="logo" style="width:1000px;height:300px;" >
-
+<title> Placebo </title>
+<link href="style.css" rel="stylesheet" type="text/css">
 </head>
-</div>
-<style>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  {box-sizing: border-box}
-body {font-family: Arial, Helvetica, sans-serif;}
 
-.navbar {
-  width: 100%;
-  background-color: #555;
-  overflow: auto;
-}
-
-.navbar a {
-  float: left;
-  padding: 12px;
-  color: white;
-  text-decoration: none;
-  font-size: 17px;
-  width: 20%; /* Four links of equal widths */
-  text-align: center;
-}
-
-
-.navbar a.active {
-  background-color: #000000 ;
-}
-
-@media screen and (max-width: 500px) {
-  .navbar a {
-    float: none;
-    display: block;
-    width: 100%;
-    text-align: left;
-  }
-}
-
-.center {
-  margin: auto;
-  width: 50%;
-  border: 3px solid #555;
-  padding: 10px;
-}
-
-.navbar a:hover {
-  background-color: #8c8c8c;
-}
-
-.navbar a.active {
-  background-color: 	#000000;
-}
-
-
-</style>
 <body>
-
-<div class="navbar">
-  <a href="Home.html">Home</a> 
-  <a href="aboutus.html">About Us</a> 
-  <a class="active" href="albums.html">Albums</a> 
-  <a href="tour.html">Tours</a>
-  <a href="eShop.html">eShop</a>
-  </div>
-  
-<img src="album01.jpg" alt="20YearsPlacebo" style="width:300px;height:250px;">
-<img src="album02.jpg" alt="20YearsPlacebo" style="width:300px;height:250px;">
-<img src="album03.jpg" alt="20YearsPlacebo" style="width:300px;height:250px;">
-<img src="album04.jpg" alt="20YearsPlacebo" style="width:300px;height:250px;">
-<img src="album05.png" alt="20YearsPlacebo" style="width:300px;height:250px;">
-
-
-<br><br>
-
-</div>
+	<header>
+		
+		<div class="row">
+			
+			<div class="logo">
+				<img src= "Layer 1.png" > 
+			</div>
+			
+			<ul class= "main-nav">
+				<li class="active"><a href="index.html"> HOME </a> </li>
+				<li><a href="albums.html"> ALBUMS </a> </li>
+				<li><a href="tours.html"> TOURS </a> </li>
+				<li><a href="aboutus.html"> ABOUT US</a> </li>
+				<li><a href="eshop.html"> eSHOP </a> </li>
+			</ul>
+			
+		</div>
+		
+		<div class="periexomeno">
+		</div>
+	</header>
+	
 </body>
 
 </html>
-<footer class="footer">
-<marquee>
-Copyright &copy; 20 Year Of Placebo
-</marquee>
-</footer>
-
