--- a/aboutus.html
+++ b/aboutus.html
@@ -1,63 +1,30 @@
-<!DOCTYPE HTML>
 <html>
-    <head>
-   <meta charset="UTF-8">
-	<meta name="aboutus" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="./style.css">
-	<title> About us </title>	
-    
-<img src="placebo1.png" alt="placebo1" style="width:1000px;height:400px;">
-
-</div>
+<head>
+<title> Placebo </title>
+<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
-
-
 <body>
-<div class="navbar">
-  <a href="Home.html">Home</a> 
-  <a class="active" href="aboutus.html">About Us</a> 
-  <a href="albums.html">Albums</a> 
-  <a href="tour.html">Tours</a>
-  <a href="eShop.html">eShop</a>
-  </div>
-
-<div class="aboutus">
-
-<img src="BrianMolko.jpg" alt="BrianMolko" style="width:300px;height:250px;"">
-<p>Lead Singer: <b>Brian Molko</b> 
-<br><p><b>Born</b>: 10 December 1972(Age 46) at Brussels, Belgium<br>
-<br><b>Occupation(s)</b>:Musician, singer-songwriter, actor<br>
-<br>More information for Brian Molko:<a href="https://en.wikipedia.org/wiki/Brian_Molko">Brian Molko</a>
-</div>
-</p>
-
- 
- <img src="StefanOlsdal.jpg" alt="StefanOlsdal" style="width:300px;height:250px;"">
-<p> Guitarist: <b>Stefan Olsdal</b>
-<br><p><b>Born</b>: 31 March 1974(Age 45) at Gothenburg, Sweden<br>
-<br><b>Occupation(s)</b>:Musician, singer-songwriter<br>
-<br>More information for Stefan Olsdal:<a href=https://en.wikipedia.org/wiki/Stefan_Olsdal>Stefan Olsdal</a>
-</div>
-</p>
-
-
-<img src="SteveForrest.jpg" alt="SteveForrest" style="width:300px;height:250px;" >
-<p>Drummer: <b>Steve Forrest</b>
-<br><p><b>Born</b>: 25 September 1986(Age 32) at Modesto, California, United States<br>
-<br><b>Occupation(s)</b>:Musician, vocalist<br>
-<br>More information for Steve Forrest:<a href=https://en.wikipedia.org/wiki/Steve_Forrest_(musician)>Steve Forrest<a>
-
-</div>
-</p>
-
-
+	<header>
+		
+		<div class="row">
+			
+			<div class="logo">
+				<img src= "Layer.png" > 
+			</div>
+			
+			<ul class= "main-nav">
+				<li class="active"><a href="index.html"> HOME </a> </li>
+				<li><a href="albums.html"> ALBUMS </a> </li>
+				<li><a href="tours.html"> TOURS </a> </li>
+				<li><a href="aboutus.html"> ABOUT US</a> </li>
+				<li><a href="eshop.html"> eSHOP </a> </li>
+			</ul>
+			
+		</div>
+		
+	</header>
+	
 </body>
 
 </html>
-<footer class="footer">
-<marquee>
-Copyright &copy; 20 Year Of Placebo
-</marquee>
-</footer>
-
