--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div class="row">
 			
 			<div class="logo">
-				<img src= "Layer 1.png" > 
+				<img src= "Layer.png" > 
 			</div>
 			
 			<ul class= "main-nav">
