--- a/albums.html
+++ b/albums.html
@@ -37,7 +37,13 @@
 		   </a>
 		   </div>
 		  
+		   <div class="gallery">
+		   <a target="_blank" href="coveralbums/album2.jpg">
+		   <img src="coveralbums/album3.jpg" alt="Meds" width="150" height="150">
+		   </a>
+		   </div>
 		  </div>
+		  
 		
 	</header>
 	
