--- a/albums.html
+++ b/albums.html
@@ -50,7 +50,12 @@
 		   </div>
 		  </div>
 		 
-		  
+		  <div class="gallery">
+		   <a target="_blank" href="coveralbums/album2.jpg">
+		   <img src="coveralbums/album5.jpg" alt="With Out You I'm Nothing" width="150" height="150">
+		   </a>
+		   </div>
+		  </div>
 		  </div>
 		  
 		
