--- a/tours.html
+++ b/tours.html
@@ -18,7 +18,7 @@
 				<li><a href="albums.html"> ALBUMS </a> </li>
 				<li><a href="tours.html"> TOURS </a> </li>
 				<li><a href="aboutus.html"> ABOUT US</a> </li>
-				<li><a href="eshop.php"> eSHOP </a> </li>
+				<li><a href="cart.php"> eSHOP </a> </li>
 			</ul>
 			
 		</div>
