--- a/tours.html
+++ b/tours.html
@@ -22,7 +22,17 @@
 			</ul>
 			
 		</div>
-		
+		<div class="center">
+     <p> Our Tour program for this summer:
+      <br><br>1. Wednesday 04 July 2019 - Sunday 08 July 2019 Expocenter of Ukraine/ Kyiv(Kiev), Ukraine<br><br>
+        2. Suturday  14 July 2019 EXPO MILANO Milan, Italy
+       <br><br>3. Suturday  21 July 2019 Royal Festival Hall. Southbank Centre London, UK
+      <br><br>4. Friday    14 August 2019 OAKA Stadium Athens, Greece
+    </div>
+     </body>
+    </html>  
+	</div>
+    
 	</header>
 	
 </body>
