--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			
 			<ul class= "main-nav">
 				<li class="active"><a href="index.html"> HOME</a> </li>
-				<li><a href="album.html"> ALBUMS </a> </li>
+				<li><a href="albums.html"> ALBUMS </a> </li>
 				<li><a href="tours.html"> TOURS </a> </li>
 				<li><a href="aboutus.html"> ABOUT US</a> </li>
 				<li><a href="cart.php"> eSHOP </a> </li>
