adding log in system and changes on cart-eshop

--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,6 @@
 <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
-
 <body>
 	<header>
 		
@@ -15,11 +14,11 @@
 			</div>
 			
 			<ul class= "main-nav">
-				<li class="active"><a href="index.html">HOME</a> </li>
+				<li class="active"><a href="index.html"> HOME </a> </li>
 				<li><a href="albums.html"> ALBUMS </a> </li>
 				<li><a href="tours.html"> TOURS </a> </li>
 				<li><a href="aboutus.html"> ABOUT US</a> </li>
-				<li><a href="cart.php"> eSHOP </a> </li>
+				<li><a href="loginindex.php"> eSHOP </a> </li>
 			</ul>
 			
 		</div>
@@ -29,8 +28,3 @@
 </body>
 
 </html>
-<footer class="footer">
-<marquee>
-Copyright &copy; 20 Year Of Placebo
-</marquee>
-</footer>
