--- a/tours.html
+++ b/tours.html
@@ -22,7 +22,7 @@
 			</ul>
 			
 		</div>
-		<div class="center">
+		<div class="periexomeno">
      <p> Our Tour program for this summer:
       <br><br>1. Wednesday 04 July 2019 - Sunday 08 July 2019 Expocenter of Ukraine/ Kyiv(Kiev), Ukraine<br><br>
         2. Suturday  14 July 2019 EXPO MILANO Milan, Italy
