--- a/tours.html
+++ b/tours.html
@@ -23,7 +23,7 @@
 			
 		</div>
 		<div class="periexomeno">
-     <p> Our Tour program for this summer:
+     <p><br>Our Tour Program For This Summer:
       <br><br>1. Wednesday 04 July 2019 - Sunday 08 July 2019 Expocenter of Ukraine/ Kyiv(Kiev), Ukraine<br><br>
         2. Suturday  14 July 2019 EXPO MILANO Milan, Italy
        <br><br>3. Suturday  21 July 2019 Royal Festival Hall. Southbank Centre London, UK
