--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 			
 			<div class="logo">
 				<img src= "Layer.png" > 
-			</div>
 			
 			<ul class= "main-nav">
 				<li class="active"><a href="index.html"> HOME </a> </li>
@@ -20,12 +19,12 @@
 				<li><a href="aboutus.html"> ABOUT US</a> </li>
 				<li><a href="loginindex.php"> eSHOP </a> </li>
 			</ul>
-			
-		</div>
+			</div>
 		
 		<div class="welcome">
-		<h1> WELCOME TO PLACEBO </h1>
+		<h1> 20 YEAR OF PLACEBO </h1>
 		</div>
+		
 	</header>
 	
 </body>
