--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</div>
 		
 		<div class="welcome">
-		<h1> 20 YEAR OF PLACEBO </h1>
+		<br><br><br><br><br><h1> 20 YEAR OF PLACEBO </h1></br></br></br></br></br>
 		</div>
 		
 	</header>
