add style tours

--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
 		
 		</div>
 		
+	
+		
+		
+		
+		<div class="welcome"
+		<h1> 20 Year Of Placebo </h1>
+		
+		</div>
+		
 	</header>
 	
 </body>
