--- a/aboutus.html
+++ b/aboutus.html
@@ -24,44 +24,41 @@
 			
 		</div>
 		
+		
+
+	</header>
 	
+	<div class="periexomeno">
+		<div class="aboutus">
+			<div class="gallery">
+			  <img src="BrianMolko.jpg" alt="BrianMolko" style="width:200px;height:200px;">
+			  <p>Lead Singer: <b>Brian Molko</b> 
+			  <br><b>Born</b>:10 December 1972(Age 46) at Brussels, Belgium<br>
+			  <br><b>Occupation(s)</b>:Musician, singer-songwriter, actor<br>
+			  <br>More information for Brian Molko:<a href="https://en.wikipedia.org/wiki/Brian_Molko">Brian Molko</a>
+			  </p>
+			</div>
 
-
-
-
-   <div class="periexomeno">
-
-   <div class="gallery">
-  <img src="BrianMolko.jpg" alt="BrianMolko" style="width:200px;height:200px;"">
-  <p>Lead Singer: <b>Brian Molko</b> 
-  <br><p><b>Born</b>:10 December 1972(Age 46) at Brussels, Belgium<br>
-  <br><b>Occupation(s)</b>:Musician, singer-songwriter, actor<br>
-  <br>More information for Brian Molko:<a href="https://en.wikipedia.org/wiki/Brian_Molko">Brian Molko</a>
-</div>
-</p>
-
-     <div class="gallery">
- <img src="StefanOlsdal.jpg" alt="StefanOlsdal" style="width:200px;height:200px;"">
-<p> Guitarist: <b>Stefan Olsdal</b>
-<br><p><b>Born</b>: 31 March 1974(Age 45) at Gothenburg, Sweden<br>
-<br><b>Occupation(s)</b>:Musician, singer-songwriter<br>
-<br>More information for Stefan Olsdal:<a href=https://en.wikipedia.org/wiki/Stefan_Olsdal>Stefan Olsdal</a>
-</div>
-</p>
-
-  <div class="gallery">
-<img src="SteveForrest.jpg" alt="SteveForrest" style="width:200px;height:200px;" >
-<p>Drummer: <b>Steve Forrest</b>
-<br><p><b>Born</b>: 25 September 1986(Age 32) at Modesto, California, United States<br>
-<br><b>Occupation(s)</b>:Musician, vocalist<br>
-<br>More information for Steve Forrest:<a href=https://en.wikipedia.org/wiki/Steve_Forrest_(musician)>Steve Forrest<a>
-
-</div>
-</p>
-
-
-
-</header>
+			<div class="gallery">
+				<img src="StefanOlsdal.jpg" alt="StefanOlsdal" style="width:200px;height:200px;">
+				<p> Guitarist: <b>Stefan Olsdal</b>
+				<br><b>Born</b>: 31 March 1974(Age 45) at Gothenburg, Sweden<br>
+				<br><b>Occupation(s)</b>:Musician, singer-songwriter<br>
+				<br>More information for Stefan Olsdal:<a href=https://en.wikipedia.org/wiki/Stefan_Olsdal>Stefan Olsdal</a>
+				</p>
+			</div>
+			
+			<div class="gallery">
+				<img src="SteveForrest.jpg" alt="SteveForrest" style="width:200px;height:200px;" >
+				<p>Drummer: <b>Steve Forrest</b>
+				<br><b>Born</b>: 25 September 1986(Age 32) at Modesto, California, United States<br>
+				<br><b>Occupation(s)</b>:Musician, vocalist<br>
+				<br>More information for Steve Forrest:<a href=https://en.wikipedia.org/wiki/Steve_Forrest_(musician)>Steve Forrest<a>
+				</p>
+			</div>
+		</div>
+	</div>
+	
 </body>
 
 </html>
